--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -8,15 +9,63 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
 
-    <title>Hello, world!</title>
-  </head>
-  <body>
-    <h1>Hello, world!</h1>
+    <title>El trivago de los Moteles</title>
+</head>
+
+<body>
+    <div class="jumbotron">
+        <h1>Motelazos</h1>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-4">
+                <p>
+                    <h3>Se paga por hora?</h3>
+                    <p>clarines, es mas puedes pagar por minutos (por si no duras lo suficiente)</p>
+                </p>
+            </div>
+            <div class="col-sm-4">
+                <p>
+                    <h3>Descuentos por casero</h3>
+                    <p>Si vienes mas de 10 veces te hacemos un descuento del 20%</p>
+                </p>
+            </div>
+            <div class="col-sm-4">
+                <p>
+                    <h3>Aceptamos Bitcoins</h3>
+                    <p>Por si necesitas mantener el anonimato, aceptamos este tipo de moneda pero recuerda el pago tiene que ser anticipado</p>
+                </p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-3">
+                <h4>Chichico</h4>
+                <p>Este es el motel en donde Chichico fue, vayan y viviran la misma experiencia</p>
+                <button class="btn">Reserva We...</button>
+            </div>
+            <div class="col-sm-3">
+                <h4>Chichico</h4>
+                <p>Este es el motel en donde Chichico fue, vayan y viviran la misma experiencia</p>
+                <button class="btn">Reserva We...</button>
+            </div>
+            <div class="col-sm-3">
+                <h4>Chichico</h4>
+                <p>Este es el motel en donde Chichico fue, vayan y viviran la misma experiencia</p>
+                <button class="btn">Reserva We...</button>
+            </div>
+            <div class="col-sm-3">
+                <h4>Chichico</h4>
+                <p>Este es el motel en donde Chichico fue, vayan y viviran la misma experiencia</p>
+                <button class="btn">Reserva We...</button>
+            </div>
+        </div>
+    </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/popper.js/dist/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-  </body>
+</body>
+
 </html>
