--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-
+    <link rel="stylesheet" href="/css/main.css">
     <title>El trivago de los Moteles</title>
 </head>
 
@@ -33,34 +33,84 @@
             <div class="col-sm-4">
                 <p>
                     <h3>Aceptamos Bitcoins</h3>
-                    <p>Por si necesitas mantener el anonimato, aceptamos este tipo de moneda pero recuerda el pago tiene que ser anticipado</p>
+                    <p>Por si necesitas mantener el anonimato, aceptamos este tipo de moneda pero recuerda el pago tiene
+                        que ser anticipado</p>
                 </p>
             </div>
         </div>
-        <div class="row">
-            <div class="col-sm-3">
-                <h4>Chichico</h4>
-                <p>Este es el motel en donde Chichico fue, vayan y viviran la misma experiencia</p>
-                <button class="btn">Reserva We...</button>
+        <div class="d-flex flex-wrap">
+            <div class="col-sm-3 d-flex flex-column justify-content-between mt-3">
+                <div>
+                    <h4>Chichico</h4>
+                    <p>Este es el motel en donde Chichico fue, vayan y viviran la misma experiencia</p>
+                </div>
+                <div>
+                    <button class="btn btn-primary btn-block">Reserva We...</button>
+                </div>
             </div>
-            <div class="col-sm-3">
-                <h4>Chichico</h4>
-                <p>Este es el motel en donde Chichico fue, vayan y viviran la misma experiencia</p>
-                <button class="btn">Reserva We...</button>
+            <div class="col-sm-3 d-flex flex-column justify-content-between mt-3">
+                <div>
+                    <h4>Boca del lobo</h4>
+                    <p>No caigas en boca de nadie, mejor cae en la boca del lobo</p>
+                </div>
+                <div>
+                    <button class="btn btn-primary btn-block">Reserva We...</button>
+                </div>
             </div>
-            <div class="col-sm-3">
-                <h4>Chichico</h4>
-                <p>Este es el motel en donde Chichico fue, vayan y viviran la misma experiencia</p>
-                <button class="btn">Reserva We...</button>
+            <div class="col-sm-3 d-flex flex-column justify-content-between mt-3">
+                <div>
+                    <h4>Hoy toca</h4> mt-3
+                    <p>Porque si no toca hoy, Cuando?</p>
+                </div>
+                <div>
+                    <button class="btn btn-primary btn-block">Reserva We...</button>
+                </div>
             </div>
-            <div class="col-sm-3">
-                <h4>Chichico</h4>
-                <p>Este es el motel en donde Chichico fue, vayan y viviran la misma experiencia</p>
-                <button class="btn">Reserva We...</button>
+            <div class="col-sm-3 d-flex flex-column justify-content-between mt-3">
+                <div>
+                    <h4>Rapid-inn</h4>
+                    <p>Para esos momentos fugases en los que no puedes aguatar las ganas y no tienes mucho money</p>
+                </div>
+                <div>
+                    <button class="btn btn-primary btn-block">Reserva We...</button>
+                </div>
+            </div>
+            <div class="col-sm-3 d-flex flex-column justify-content-between mt-3">
+                <div>
+                    <h4>Boca del lobo</h4>
+                    <p>No caigas en boca de nadie, mejor cae en la boca del lobo</p>
+                </div>
+                <div>
+                    <button class="btn btn-primary btn-block">Reserva We...</button>
+                </div>
+            </div>
+            <div class="col-sm-3 d-flex flex-column justify-content-between mt-3">
+                <div>
+                    <h4>Hoy toca</h4>
+                    <p>Porque si no toca hoy, Cuando?</p>
+                </div>
+                <div>
+                    <button class="btn btn-primary btn-block">Reserva We...</button>
+                </div>
             </div>
         </div>
     </div>
-
+    <footer>
+        <div class="row mt-5 p-4">
+            <div class="col-sm-4 d-flex flex-column">
+                <a href="#">caralibro</a>
+            </div>
+            <div class="col-sm-4">
+                <address>
+                    <h3>Oficina Central</h3>
+                </address>
+            </div>
+            <div class="col-sm-4  d-flex flex-column align-items-end">
+                <a href="#">Nosotros</a>
+                <a href="#">Contactos</a>
+            </div>
+        </div>
+    </footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
