--- a/index.html
+++ b/index.html
@@ -13,10 +13,35 @@
 </head>
 
 <body>
+
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+        <a class="navbar-brand" href="#">Moteles</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active"><a class="nav-link" href="./index.html">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="./about.html">Nosotros</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Preguntas</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Termino</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
+        </div>
+        </ul>
+    </nav>
     <div class="jumbotron">
         <h1>Motelazos</h1>
     </div>
+
     <div class="container">
+
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item active" aria-current="page">Home</li>
+            </ol>
+        </nav>
+
         <div class="row">
             <div class="col-sm-4">
                 <p>
