--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="node_modules/open-iconic/font/css/open-iconic-bootstrap.min.css">
     <title>El trivago de los Moteles</title>
 </head>
 
@@ -51,6 +52,7 @@
             <div class="col-sm-4">
                 <address>
                     <h3>Oficina Central</h3>
+                    <p><span class="oi oi-phone footer-icon"></span> +5231464654</p>
                 </address>
             </div>
             <div class="col-sm-4  d-flex flex-column align-items-end">
