--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="node_modules/open-iconic/font/css/open-iconic-bootstrap.min.css">
     <title>El trivago de los Moteles</title>
 </head>
 
@@ -69,8 +70,8 @@
                     <h4>Chichico</h4>
                     <p>Este es el motel en donde Chichico fue, vayan y viviran la misma experiencia</p>
                 </div>
-                <div>
-                    <button class="btn btn-primary btn-block">Reserva We...</button>
+                 <div>
+                    <button class="btn btn-primary btn-block"><span class="oi oi-plus footer-icon"></span> Reserva We...</button>
                 </div>
             </div>
             <div class="col-sm-3 d-flex flex-column justify-content-between mt-3">
@@ -78,8 +79,8 @@
                     <h4>Boca del lobo</h4>
                     <p>No caigas en boca de nadie, mejor cae en la boca del lobo</p>
                 </div>
-                <div>
-                    <button class="btn btn-primary btn-block">Reserva We...</button>
+                 <div>
+                    <button class="btn btn-primary btn-block"><span class="oi oi-plus footer-icon"></span> Reserva We...</button>
                 </div>
             </div>
             <div class="col-sm-3 d-flex flex-column justify-content-between mt-3">
@@ -87,8 +88,8 @@
                     <h4>Hoy toca</h4> mt-3
                     <p>Porque si no toca hoy, Cuando?</p>
                 </div>
-                <div>
-                    <button class="btn btn-primary btn-block">Reserva We...</button>
+                 <div>
+                    <button class="btn btn-primary btn-block"><span class="oi oi-plus footer-icon"></span> Reserva We...</button>
                 </div>
             </div>
             <div class="col-sm-3 d-flex flex-column justify-content-between mt-3">
@@ -96,8 +97,8 @@
                     <h4>Rapid-inn</h4>
                     <p>Para esos momentos fugases en los que no puedes aguatar las ganas y no tienes mucho money</p>
                 </div>
-                <div>
-                    <button class="btn btn-primary btn-block">Reserva We...</button>
+                 <div>
+                    <button class="btn btn-primary btn-block"><span class="oi oi-plus footer-icon"></span> Reserva We...</button>
                 </div>
             </div>
             <div class="col-sm-3 d-flex flex-column justify-content-between mt-3">
@@ -105,8 +106,8 @@
                     <h4>Boca del lobo</h4>
                     <p>No caigas en boca de nadie, mejor cae en la boca del lobo</p>
                 </div>
-                <div>
-                    <button class="btn btn-primary btn-block">Reserva We...</button>
+                 <div>
+                    <button class="btn btn-primary btn-block"><span class="oi oi-plus footer-icon"></span> Reserva We...</button>
                 </div>
             </div>
             <div class="col-sm-3 d-flex flex-column justify-content-between mt-3">
@@ -115,7 +116,7 @@
                     <p>Porque si no toca hoy, Cuando?</p>
                 </div>
                 <div>
-                    <button class="btn btn-primary btn-block">Reserva We...</button>
+                    <button class="btn btn-primary btn-block"><span class="oi oi-plus footer-icon"></span> Reserva We...</button>
                 </div>
             </div>
         </div>
@@ -128,6 +129,7 @@
             <div class="col-sm-4">
                 <address>
                     <h3>Oficina Central</h3>
+                    <p><span class="oi oi-phone footer-icon"></span> +5231464654</p>
                 </address>
             </div>
             <div class="col-sm-4  d-flex flex-column align-items-end">
